docs/apache-airflow-providers-google/12.0.0/_sources/_api/tests/system/google/cloud/cloud_functions/example_functions/index.rst.txt
:py:mod:`tests.system.google.cloud.cloud_functions.example_functions`
=====================================================================

.. py:module:: tests.system.google.cloud.cloud_functions.example_functions

.. autoapi-nested-parse::

   Example Airflow DAG that displays interactions with Google Cloud Functions.
   It creates a function and then deletes it.



Module Contents
---------------

.. py:data:: PROJECT_ID

   

.. py:data:: ENV_ID

   

.. py:data:: DAG_ID
   :value: 'gcp_function'

   

.. py:data:: LOCATION
   :value: 'europe-west1'

   

.. py:data:: SHORT_FUNCTION_NAME
   :value: 'hello_world'

   

.. py:data:: FUNCTION_NAME

   

.. py:data:: SOURCE_ARCHIVE_URL
   :value: 'gs://airflow-system-tests-resources/cloud-functions/main_function.zip'

   

.. py:data:: ENTRYPOINT
   :value: 'hello_world'

   

.. py:data:: RUNTIME
   :value: 'python38'

   

.. py:data:: SOURCE_UPLOAD_URL
   :value: ''

   

.. py:data:: ZIP_PATH
   :value: ''

   

.. py:data:: repo

   

.. py:data:: SOURCE_REPOSITORY
   :value: ()

   

.. py:data:: VALIDATE_BODY
   :value: True

   

.. py:data:: body

   

.. py:data:: default_args
   :type: dict[str, Any]

   

.. py:data:: deploy_function

   

.. py:data:: test_run

   

