docs/apache-airflow-providers-google/15.0.0/_sources/_api/tests/system/google/cloud/cloud_functions/example_functions/index.rst.txt
tests.system.google.cloud.cloud_functions.example_functions
===========================================================

.. py:module:: tests.system.google.cloud.cloud_functions.example_functions

.. autoapi-nested-parse::

   Example Airflow DAG that displays interactions with Google Cloud Functions.
   It creates a function and then deletes it.



Attributes
----------

.. autoapisummary::

   tests.system.google.cloud.cloud_functions.example_functions.PROJECT_ID
   tests.system.google.cloud.cloud_functions.example_functions.ENV_ID
   tests.system.google.cloud.cloud_functions.example_functions.DAG_ID
   tests.system.google.cloud.cloud_functions.example_functions.LOCATION
   tests.system.google.cloud.cloud_functions.example_functions.SHORT_FUNCTION_NAME
   tests.system.google.cloud.cloud_functions.example_functions.FUNCTION_NAME
   tests.system.google.cloud.cloud_functions.example_functions.SOURCE_ARCHIVE_URL
   tests.system.google.cloud.cloud_functions.example_functions.ENTRYPOINT
   tests.system.google.cloud.cloud_functions.example_functions.RUNTIME
   tests.system.google.cloud.cloud_functions.example_functions.SOURCE_UPLOAD_URL
   tests.system.google.cloud.cloud_functions.example_functions.ZIP_PATH
   tests.system.google.cloud.cloud_functions.example_functions.repo
   tests.system.google.cloud.cloud_functions.example_functions.SOURCE_REPOSITORY
   tests.system.google.cloud.cloud_functions.example_functions.VALIDATE_BODY
   tests.system.google.cloud.cloud_functions.example_functions.body
   tests.system.google.cloud.cloud_functions.example_functions.default_args
   tests.system.google.cloud.cloud_functions.example_functions.deploy_function
   tests.system.google.cloud.cloud_functions.example_functions.test_run


Module Contents
---------------

.. py:data:: PROJECT_ID

.. py:data:: ENV_ID

.. py:data:: DAG_ID
   :value: 'gcp_function'


.. py:data:: LOCATION
   :value: 'europe-west1'


.. py:data:: SHORT_FUNCTION_NAME
   :value: 'hello_world'


.. py:data:: FUNCTION_NAME
   :value: 'projects/Uninferable/locations/europe-west1/functions/hello_world'


.. py:data:: SOURCE_ARCHIVE_URL
   :value: 'gs://airflow-system-tests-resources/cloud-functions/main_function.zip'


.. py:data:: ENTRYPOINT
   :value: 'hello_world'


.. py:data:: RUNTIME
   :value: 'python38'


.. py:data:: SOURCE_UPLOAD_URL
   :value: ''


.. py:data:: ZIP_PATH
   :value: ''


.. py:data:: repo
   :value: ''


.. py:data:: SOURCE_REPOSITORY
   :value: ()


.. py:data:: VALIDATE_BODY
   :value: True


.. py:data:: body

.. py:data:: default_args
   :type:  dict[str, Any]

.. py:data:: deploy_function

.. py:data:: test_run

